# build_ssd_dataset

./: README.md
build_dataset/: CMakeLists.txt  build_dataset使用教程.md  package.xml
build_dataset/include/build_dataset/: common_include.h  formXML.h  mergeBackGround.h  rgbAndGroundTruth.h
build_dataset/src/: formConfigFiles.cpp  formXML.cpp  main.cpp  mergeBackGround.cpp  rgbAndGroundTruth.cpp
